--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-body {
-    padding: 20px;
-}
 
-.add {
+.content {
+    padding: 20px;
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.add {
     display: flex;
 }
 
@@ -13,6 +14,7 @@ body {
     border: 1px solid #ebebeb;
     border-radius: 4px;
     padding: 8px;
+    flex-grow: 1;
 }
 
 .add__button {
